# own-repos-curator

./: AGENTS.md  Cargo.toml  README.ja.md  README.md  _config.yml  build.rs
issue-notes/: 10.md  13.md  3.md  5.md  8.md
src/: app.rs  config.rs  data_link.rs  github.rs  json_auto_push.rs  local_json_sync.rs  main.rs  main_cli.rs  main_tests.rs  model.rs  paths.rs  process.rs  repo_url_cache.rs  self_update.rs  self_update_tests.rs  ui.rs
src/app/: background.rs  background_app.rs  background_progress.rs  editor.rs  filter.rs  groups.rs  helpers.rs  key_handling.rs  navigation.rs  persistence.rs  startup.rs  state.rs  tags.rs  view.rs
src/app/tests/: common.rs  core.rs  filtering.rs  group_binding.rs  manual_push.rs  mod.rs  navigation.rs  tag_binding.rs
src/app/tests/core/: background.rs  background_jobs.rs  display.rs  editing.rs  editor_and_display.rs  helpers.rs  interaction.rs  key_handling.rs  mod.rs  tag_helpers.rs
src/ui/: group_colors.rs  help.rs  input_overlays.rs  layout.rs  overlay_binding_modes.rs  overlay_managers.rs  overlays.rs  panels.rs  right_pane.rs  sync_progress.rs  tag_colors.rs  test_utils.rs  theme.rs
src/ui/overlays/: binding_modes.rs  filter_mode.rs  managers.rs  mod.rs  tests.rs
